chore: update package.json
Add name.
Add license.
Add author.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
+  "name": "nextjs-app-router-course",
   "private": true,
+  "license": "MIT",
+  "engines": {
+    "node": ">=18.17.0"
+  },
+  "author": {
+    "name": "Kenedy Olisi"
+  },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -34,8 +42,5 @@
     "eslint-config-prettier": "9.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "0.5.4"
-  },
-  "engines": {
-    "node": ">=18.17.0"
   }
 }
